--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,12 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.*"
+        "illuminate/support": "4.*",
+        "illuminate/http": "4.*",
+        "illuminate/database": "4.*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.*"
     },
     "autoload": {
         "psr-0": {
