--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.*",
-        "illuminate/http": "4.*",
-        "illuminate/database": "4.*"
+        "illuminate/database": "4.2.*",
+        "illuminate/http": "4.2.*",
+        "illuminate/support": "4.2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
