--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=5.4.0",
         "illuminate/database": "5.0.*",
         "illuminate/http": "5.0.*",
-        "illuminate/support": "5.0.*"
+        "illuminate/support": "5.0.*",
+		"illuminate/pagination" : "5.0.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
