--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,15 @@
 	"illuminate/pagination" : "5.1.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*"
+        "phpunit/phpunit": "4.*",
+        "justinrainbow/json-schema": "^1.5"
     },
     "autoload": {
         "psr-0": {
             "EchoIt\\JsonApi\\": "src/"
+        },
+        "psr-4": {
+            "EchoIt\\JsonApi\\Tests\\": "tests/"
         }
     }
 }
